--- a/index.html
+++ b/index.html
@@ -1,1 +1,171 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="Daniel Tatarkin's personal page" />
+        <meta name="author" content="Daniel Tatarkin" />
+        <title>Daniel Tatarkin</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Daniel Tatarkin</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Projects</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Daniel
+                        <span class="text-primary">Tatarkin</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        <a href="mailto:danieltatarkin@gmail.com">danieltatarkin@gmail.com</a>
+                         · New York, NY
+                        
+                    </div>
+                    <p class="lead mb-5">Experienced AWS Solutions Architect</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.linkedin.com/in/danieltatarkin/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/DanielTatarkin"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/DanielTatarkin"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="mailto:danieltatarkin@gmail.com"><i class="far fa-envelope"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Solutions Architect</h3>
+                            <div class="subheading mb-3">Amazon Web Services</div>
+                            <p>Helping AWS customers design scalable and resilient architectures that follow best practices.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2019 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Android Developer</h3>
+                            <div class="subheading mb-3">FieldLogix</div>
+                            <p>ROLE DESCRIPTION</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2018 - May 2019</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">San Diego State University</h3>
+                            <div class="subheading mb-3">Bachelor of Science in Computer Science</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2015 - May 2019</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-aws"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-docker"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-git"></i></li>
+                    </ul>
+                    <div class="subheading mb-3">Certifications</div>
+                    <ul>
+                        <li>
+                            <a href="https://www.credly.com/badges/0fc71553-8a03-4a91-9f71-acfd267e8b11">
+                                <p>AWS Certified Solutions Architect - Professional</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.credly.com/badges/4c753809-6c7e-419f-8301-4beeb1c35a1a/">
+                                <p>AWS Certified Big Data - Specialty</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.credly.com/earner/earned/badge/7d4c454f-c105-4d7c-a581-585e135c4990">
+                                <p>AWS Certified Developer - Associate</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.credly.com/earner/earned/badge/6aa1bd75-b514-4313-954f-5985574cafaa">
+                                <p>AWS Certified SysOps Administrator - Associate</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.credly.com/earner/earned/badge/cb325ab3-c79a-485f-a1ed-d5fa7da6fe85">
+                                <p>AWS Certified Solutions Architect - Associate</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- <div class="subheading mb-3">Workflow</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Mobile-First, Responsive Design
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cross Browser Testing & Debugging
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cross Functional Teams
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Agile Development & Scrum
+                        </li>
+                    </ul> -->
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Projects-->
+            <section class="resume-section" id="awards">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                </div>
+            </section>
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
