Added a gitignore file

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
                         <span class="text-primary">Tatarkin</span>
                     </h1>
                     <div class="subheading mb-5">
+                        New York, NY · 
                         <a href="mailto:danieltatarkin@gmail.com">danieltatarkin@gmail.com</a>
-                         · New York, NY
-                        
                     </div>
                     <p class="lead mb-5">Experienced AWS Solutions Architect</p>
                     <div class="social-icons">
@@ -65,7 +64,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Solutions Architect</h3>
                             <div class="subheading mb-3">Amazon Web Services</div>
-                            <p>Helping AWS customers design scalable and resilient architectures that follow best practices.</p>
+                            <p>Helping AWS customers design scalable and resilient cloud architectures that follow best practices</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2019 - Present</span></div>
                     </div>
